src/components/layout/layout.module.scss
@import "../../styles/font-styles";
@import "../../styles/utils";
@import "../../styles/vars";

.desktopHeader {
  align-items: center;
  margin: 0 auto;
  max-width: $maxContentWidth;
  padding: 20px $desktopPadding;
  display: none;
  @include from($mobileBreakpoint) {
    display: flex;
  }
}

.mobileHeader {
  display: flex;
  padding: $mobilePadding;
  align-items: center;
  box-shadow: 0 1px var(--on_surface_01);
  // To make z-index apply
  position: relative;
  z-index: 3;
  background: var(--base);

  @include from($mobileBreakpoint) {
    display: none;
  }
}

.logoContainer {
  display: flex;
  align-items: center;
  text-decoration: none;
}

.logoText {
  margin-left: 8px;
  margin-right: 24px;
  @include headline_06;
  color: var(--highEmphasis);
}

.hr {
  width: 1px;
  background: var(--lowEmphasis);
  height: 48px;
  display: block;
  margin: 0;
  border: none;
  outline: none;
}

.linkContainer {
  display: flex;
  flex-direction: column;

  @include from($mobileBreakpoint) {
    flex-direction: row;
  }
}

.pageTitle {
  @include headline_06;
  color: var(--mediumEmphasis);
  margin-left: 24px;
  margin-right: auto;
}

.linkBase {
  border-radius: 8px !important;
  justify-content: flex-start !important;
  @include from($mobileBreakpoint) {
    margin-left: 24px !important;
    justify-content: center !important;
  }
}

.headerLink {
  @include callout_01;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  color: var(--highEmphasis);
  text-decoration: none;
}

.activeLink {
  @include headline_06;
  color: var(--primary);
}

.mobileExpandedContainer {
  z-index: 2;
  position: absolute;
  transition: top 300ms ease-in-out;
  background: var(--base);
  width: calc(100% - #{$mobilePadding * 2});
  padding: $mobilePadding;

  @include from($mobileBreakpoint) {
    display: none;
  }
}

.scrim {
  position: fixed;
  z-index: -1;
  background: var(--lowEmphasis);
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  opacity: 0;
  transition: opacity 300ms ease-in-out;

  @include from($mobileBreakpoint) {
    display: none;
  }
}

.activeScrim {
  opacity: 1;
  z-index: 1;
}

